# pydepscan

./: .flake8  .gitignore  Makefile  NEWS.rst  README.md  README.rst  pyproject.toml  tox.ini
.github/workflows/: ci.yml
src/: pydepscan.py
tests/: test_cli.py  test_dependency_data.py  test_scanner.py  test_utils.py
